--- a/docs/prds/1.2-youtube-api-integration.md
+++ b/docs/prds/1.2-youtube-api-integration.md
@@ -1,7 +1,7 @@
 # PRD 1.2: YouTube API Integration
 
 ## Overview
-Create a robust YouTube API client with proper authentication and rate limit handling.
+Create a robust YouTube API client with proper authentication and rate limit handling, ensuring complete access to all videos including unlisted and private ones.
 
 ## Requirements
 
@@ -10,6 +10,7 @@ Create a robust YouTube API client with proper authentication and rate limit han
 - [ ] `src/types/api-types.ts` - TypeScript interfaces
 - [ ] Authentication handling (OAuth 2.0 + API Key)
 - [ ] Rate limit tracking and management
+- [ ] Complete video access (public, unlisted, private)
 
 ### Dependencies
 - PRD 1.1 (Project Initialization)
@@ -23,8 +24,10 @@ Create a robust YouTube API client with proper authentication and rate limit han
   - `authenticate()` - OAuth 2.0 flow
   - `refreshToken()` - Token refresh logic
   - `validateCredentials()` - Credential validation
+  - `isAuthenticated()` - Check OAuth authentication status
 - **API Methods**:
-  - `getVideos()` - Fetch channel videos
+  - `getVideos()` - Fetch channel videos (public only with API key, all with OAuth)
+  - `getAllVideos()` - Fetch all videos including unlisted/private (OAuth required)
   - `getPlaylists()` - Fetch channel playlists
   - `getPlaylistItems()` - Fetch playlist videos
   - `updateVideo()` - Update video metadata
@@ -33,6 +36,18 @@ Create a robust YouTube API client with proper authentication and rate limit han
   - Track quota usage
   - Implement delays when approaching limits
   - Throw specific errors for rate limits
+
+#### Authentication Requirements for Complete Video Access
+- **OAuth 2.0 Required**: For fetching unlisted and private videos
+- **API Key Only**: Limited to public videos
+- **Channel Owner Authentication**: Must authenticate as channel owner
+- **Required Scopes**: 
+  - `https://www.googleapis.com/auth/youtube` (read/write access)
+  - `https://www.googleapis.com/auth/youtube.force-ssl` (secure access)
+- **Video Fetching Strategy**:
+  - Use OAuth 2.0 with `mine: true` parameter when authenticated
+  - Fallback to API key with `channelId` for public-only access
+  - Check authentication status before attempting to fetch all videos
 
 #### api-types.ts Requirements
 ```typescript
@@ -46,6 +61,9 @@ interface YouTubeVideo {
   categoryId: string;
   defaultLanguage?: string;
   recordingDate?: string;
+  privacyStatus: string; // public, unlisted, private
+  uploadStatus?: string; // uploaded, processing, failed, rejected
+  processingStatus?: string; // succeeded, processing, failed
 }
 
 interface YouTubePlaylist {
@@ -71,10 +89,17 @@ interface RateLimitInfo {
 ```
 
 #### Authentication Flow
-1. **API Key**: For read operations (videos, playlists)
-2. **OAuth 2.0**: For write operations (update videos, playlists)
+1. **API Key**: For read operations (public videos, playlists)
+2. **OAuth 2.0**: For write operations and complete video access
 3. **Token Refresh**: Automatic refresh before expiration
 4. **Error Handling**: Clear error messages for auth failures
+5. **Authentication Check**: Verify OAuth status before fetching all videos
+
+#### Video Fetching Implementation
+- **Public Videos**: Use API key with `search.list` and `videos.list`
+- **All Videos (including unlisted/private)**: Use OAuth 2.0 with `search.list` and `mine: true`
+- **Fallback Strategy**: If OAuth not available, use API key for public videos only
+- **Authentication Verification**: Check `isAuthenticated()` before attempting complete fetch
 
 #### Rate Limit Strategy
 - **Daily Quota**: 10,000 units
@@ -84,11 +109,14 @@ interface RateLimitInfo {
 
 ## Acceptance Criteria
 - [ ] Can authenticate with both API key and OAuth 2.0
+- [ ] Can fetch all videos (public, unlisted, private) when authenticated with OAuth
+- [ ] Falls back to public-only access when using API key only
 - [ ] All API methods work correctly
 - [ ] Rate limits are properly tracked and respected
 - [ ] Error handling provides clear, actionable messages
 - [ ] TypeScript types are complete and accurate
 - [ ] Token refresh works automatically
+- [ ] Authentication status is properly verified before video fetching
 
 ## Edge Cases
 - Handle network timeouts
@@ -96,14 +124,17 @@ interface RateLimitInfo {
 - Handle API version changes
 - Deal with malformed API responses
 - Handle quota exhaustion scenarios
+- Handle authentication failures gracefully
+- Manage fallback between OAuth and API key authentication
 
 ## Dependencies
 - PRD 1.1 (Project Initialization)
 - `googleapis` package
 - Valid YouTube API credentials
+- OAuth 2.0 setup (PRD 1.4)
 
 ## Estimated Time
 2 hours
 
 ## Notes
-This is the core API integration that all other tasks depend on. Focus on reliability and proper error handling.
+This is the core API integration that all other tasks depend on. Focus on reliability and proper error handling. The ability to fetch all videos (including unlisted and private) is critical for complete channel management.
