--- a/docs/prds/2.1-video-database-builder.md
+++ b/docs/prds/2.1-video-database-builder.md
@@ -1,12 +1,15 @@
 # PRD 2.1: Video Database Builder
 
 ## Overview
-Create a script to build the initial `videos.json` database containing all videos from the YouTube channel.
+Create a script to build the initial `videos.json` database containing all videos from the YouTube channel, including unlisted and private videos through OAuth 2.0 authentication.
 
 ## Requirements
 
 ### Core Deliverables
 - [ ] `scripts/build-video-database.ts` - Main script
+- [ ] **OAuth 2.0 Authentication**: Use OAuth 2.0 to fetch all videos (public, unlisted, private)
+- [ ] **Authentication Check**: Verify OAuth authentication before attempting complete fetch
+- [ ] **Fallback Strategy**: Use API key for public-only access when OAuth not available
 - [ ] Paginated fetching of all channel videos
 - [ ] Console logging of current page (for crash recovery)
 - [ ] Duplicate prevention (check by video ID)
@@ -18,13 +21,32 @@ Create a script to build the initial `videos.json` database containing all video
 ### Dependencies
 - PRD 1.2 (YouTube API Integration)
 - PRD 1.3 (Configuration System)
+- PRD 1.4 (OAuth 2.0 Authentication Setup)
 
 ### Technical Specifications
 
+#### Authentication Requirements
+- **OAuth 2.0 Required**: For fetching unlisted and private videos
+- **Channel Owner Authentication**: Must authenticate as channel owner
+- **Required Scopes**: 
+  - `https://www.googleapis.com/auth/youtube` (read/write access)
+  - `https://www.googleapis.com/auth/youtube.force-ssl` (secure access)
+- **Authentication Check**: Verify `isAuthenticated()` before attempting complete fetch
+- **Fallback Strategy**: Use API key for public-only access when OAuth not available
+
+#### Video Fetching Strategy
+- **Complete Access (OAuth 2.0)**: Use `mine: true` parameter to get all videos
+- **Public Only (API Key)**: Use `channelId` parameter for public videos only
+- **Authentication Verification**: Check OAuth status before attempting complete fetch
+- **Clear Logging**: Indicate which authentication method is being used
+
 #### Script Interface
 ```bash
-# Basic usage
+# Basic usage (with OAuth 2.0 for complete access)
 ts-node scripts/build-video-database.ts
+
+# Force public-only access (API key only)
+ts-node scripts/build-video-database.ts --public-only
 
 # Resume from specific page
 ts-node scripts/build-video-database.ts --resume-page 5
@@ -34,11 +56,15 @@ ts-node scripts/build-video-database.ts --dry-run
 
 # Verbose logging
 ts-node scripts/build-video-database.ts --verbose
+
+# Check authentication status
+ts-node scripts/build-video-database.ts --check-auth
 ```
 
 #### Pagination Strategy
 - **Page Size**: 50 videos per request (YouTube API max)
 - **Progress Logging**: `Processing page X of Y (Z videos found)`
+- **Authentication Logging**: `Using OAuth 2.0 for complete access` or `Using API key for public videos only`
 - **Resume Capability**: Store current page in temporary file
 - **Rate Limit**: 1 unit per request (very efficient)
 
@@ -48,6 +74,9 @@ ts-node scripts/build-video-database.ts --verbose
 - **Description**: Full description
 - **Published Date**: YouTube published date
 - **Recording Date**: Extracted from title/description
+- **Privacy Status**: public, unlisted, or private
+- **Upload Status**: uploaded, processing, failed, rejected
+- **Processing Status**: succeeded, processing, failed
 - **Last Updated**: Current timestamp
 
 #### Datetime Extraction Logic
@@ -68,6 +97,14 @@ interface DatetimeExtraction {
 {
   "lastUpdated": "2025-06-27T15:50:45Z",
   "totalVideos": 500,
+  "videosWithDates": 450,
+  "videosWithoutDates": 50,
+  "privacyStatus": {
+    "public": 300,
+    "unlisted": 150,
+    "private": 50
+  },
+  "authenticationMethod": "oauth2",
   "videos": [
     {
       "id": "video_id_1",
@@ -75,6 +112,9 @@ interface DatetimeExtraction {
       "description": "Tom Clancy's The Division 2 2025 03 29   10 01 17 02",
       "publishedAt": "2025-03-29T10:01:17Z",
       "recordingDate": "2025-03-29T10:01:17Z",
+      "privacyStatus": "unlisted",
+      "uploadStatus": "uploaded",
+      "processingStatus": "succeeded",
       "lastUpdated": "2025-06-27T15:50:45Z"
     }
   ]
@@ -82,10 +122,12 @@ interface DatetimeExtraction {
 ```
 
 #### Error Handling
+- **Authentication Errors**: Clear error messages for OAuth issues
 - **Network Errors**: Retry with exponential backoff
 - **Rate Limits**: Stop immediately, log current page
 - **Malformed Data**: Skip video, log warning
 - **File I/O Errors**: Backup existing data before writing
+- **Scope Errors**: Clear guidance on required OAuth scopes
 
 #### Resume Capability
 - **Temporary File**: `data/video-database-temp.json`
@@ -94,13 +136,16 @@ interface DatetimeExtraction {
 - **Cleanup**: Remove temporary files on completion
 
 ## Acceptance Criteria
-- [ ] Successfully fetches all videos from channel
+- [ ] Successfully fetches all videos from channel (public, unlisted, private) when OAuth authenticated
+- [ ] Falls back to public-only access when OAuth not available
 - [ ] Handles pagination correctly (no duplicates, no missing videos)
 - [ ] Extracts datetime information accurately
-- [ ] Provides clear progress logging
+- [ ] Provides clear progress logging including authentication method
 - [ ] Can resume from any page if interrupted
 - [ ] Respects rate limits and handles errors gracefully
 - [ ] Output file is valid JSON and contains all videos
+- [ ] Clear error messages for authentication issues
+- [ ] Proper fallback behavior when OAuth not available
 
 ## Edge Cases
 - Handle channels with thousands of videos
@@ -109,13 +154,17 @@ interface DatetimeExtraction {
 - Manage network timeouts
 - Handle malformed video data
 - Deal with videos in different languages
+- Handle OAuth token expiration during fetch
+- Manage authentication scope denials
+- Handle mixed privacy status videos
 
 ## Dependencies
 - PRD 1.2 (YouTube API Integration)
 - PRD 1.3 (Configuration System)
+- PRD 1.4 (OAuth 2.0 Authentication Setup)
 
 ## Estimated Time
 3 hours
 
 ## Notes
-This is a critical foundation task. The quality of this database affects all subsequent processing. Focus on reliability and completeness.
+This is a critical foundation task. The quality of this database affects all subsequent processing. Focus on reliability and completeness. The ability to fetch all videos (including unlisted and private) is essential for complete channel management. Proper authentication handling and fallback strategies are crucial for user experience.
