docs(privacy): document config-driven privacy, publishing, and playlist assignment rules (2024-06 update)

--- a/docs/prds/3.3-playlist-management.md
+++ b/docs/prds/3.3-playlist-management.md
@@ -160,3 +160,34 @@ interface MultiPlaylistManager {
 
 ## Notes
 This system ensures videos are properly organized in playlists. The chronological sorting is critical for user experience.
+
+## Playlist Privacy Enforcement (2024-06 Update)
+
+### Assignment Rules
+- Unlisted/private videos **cannot** be added to public playlists.
+- Unlisted videos **can** be added to unlisted playlists.
+- Private videos are not added to any public or unlisted playlists.
+- These rules are enforced by config and checked before playlist assignment.
+
+### Example Config
+```json
+{
+  "playlistRules": [
+    {
+      "playlistPrivacy": "public",
+      "allowUnlistedVideos": false,
+      "allowPrivateVideos": false
+    },
+    {
+      "playlistPrivacy": "unlisted",
+      "allowUnlistedVideos": true,
+      "allowPrivateVideos": false
+    }
+  ]
+}
+```
+
+### Enforcement Logic
+- Before adding a video to a playlist, check the playlist's privacy and the video's privacy.
+- If the rule is violated, skip the assignment and log a warning.
+- Manual override is possible via config.
