--- a/docs/prds/4.1-main-update-script.md
+++ b/docs/prds/4.1-main-update-script.md
@@ -353,6 +353,44 @@ Estimated time remaining: 00:08:30
 }
 ```
 
+## Privacy and Publishing Logic (2024-06 Update)
+
+### Privacy Determination
+- Privacy is determined by (in order of precedence):
+  1. Per-video override in config/database
+  2. Keywords in the title (configurable array per privacy level)
+  3. Default privacy for publish/draft (from config)
+- Example config:
+```json
+{
+  "privacyRules": {
+    "videoTitleKeywords": {
+      "unlisted": ["unlisted", "microphone"],
+      "private": ["private", "secret"]
+    },
+    "defaultVideoPrivacy": {
+      "publish": "public",
+      "draft": "unlisted"
+    }
+  }
+}
+```
+- The most restrictive privacy found applies (private > unlisted > public).
+
+### --publish Option Behavior
+- The `--publish` option will set privacy to public **only if** no privacy keyword or override applies.
+- If a video is public but matches an "unlisted" or "private" keyword, it will be changed to the more restrictive privacy.
+- If a video is unlisted/private by keyword or override, it will **not** be made public, even with `--publish`.
+
+### Downgrading Privacy
+- The script can downgrade a video from public to unlisted/private if required by config/keywords.
+- All privacy changes are logged.
+
+### Edge Cases
+- If a video matches both "unlisted" and "private" keywords, the most restrictive privacy is used.
+- Manual per-video override always takes precedence.
+- Batch operations process each video according to these rules.
+
 ## Acceptance Criteria
 - [ ] Orchestrates all processing steps correctly
 - [ ] Provides comprehensive command-line options
