docs(specs): update playlist management CSV fields and finalize workflow details

--- a/docs/prds/3.3-playlist-management.md
+++ b/docs/prds/3.3-playlist-management.md
@@ -191,3 +191,19 @@ This system ensures videos are properly organized in playlists. The chronologica
 - Before adding a video to a playlist, check the playlist's privacy and the video's privacy.
 - If the rule is violated, skip the assignment and log a warning.
 - Manual override is possible via config.
+
+## 2025-07-17: Playlist Management CLI Improvements
+
+### New Features
+- `--list <value>`: Accepts playlist title or id, smart detection.
+- `--dry-run`: Preview changes, no modifications made.
+- `--output <file>`: For sort/deduplication, saves before/after CSVs for diffing.
+- Summary logging at end of each operation.
+
+### Workflow
+- Fetch: `--fetch-items --list "..."`
+- Deduplicate: `--remove-duplicates --list "..." [--dry-run --output logs/foo.json]`
+- Sort: `--sort --list "..." [--dry-run --output logs/foo.json]`
+- Assign orphans: `--orphans --list "..."`
+
+See specifications.md for full details and requirements.
