docs(filter): document filter config system and add test for missing recordingDate

--- a/docs/prds/3.1-video-filtering-system.md
+++ b/docs/prds/3.1-video-filtering-system.md
@@ -444,3 +444,71 @@ Videos to be processed:
 
 ## Notes
 This comprehensive filtering system provides the foundation for identifying which videos need processing based on any combination of YouTube API fields. The filtering logic should be flexible, efficient, and handle all edge cases gracefully.
+
+## Filter Configuration: Usage and Examples
+
+### Overview
+
+The filtering system for `scripts/filter-videos.ts` and `scripts/process-videos.ts` allows you to select videos based on a wide range of criteria using a JSON configuration file. This is especially useful for batch operations, dry-runs, and targeted updates.
+
+### Filter Config File Structure
+
+A filter config file is a JSON object where each key is a filter name (arbitrary, for your reference), and each value is an object with:
+- `enabled`: `true` or `false` (only enabled filters are applied)
+- `filters`: an array of filter rules
+
+Each filter rule is an object with:
+- `type`: the filter type (see table below)
+- `value`: the value to match (type depends on filter)
+
+#### Example: Filter Videos Missing `recordingDate`
+
+```json
+{
+  "missingRecordingDate": {
+    "enabled": true,
+    "filters": [
+      {
+        "type": "has_recording_date",
+        "value": false
+      }
+    ]
+  }
+}
+```
+This will match all videos where the `recordingDate` property is missing, `null`, `undefined`, or an empty string.
+
+### Common Filter Types
+
+| Filter Type              | Value   | Matches videos where...                                 |
+|-------------------------|---------|--------------------------------------------------------|
+| has_recording_date      | true    | `recordingDate` is present and not empty                |
+| has_recording_date      | false   | `recordingDate` is missing, `null`, `undefined`, or ''  |
+| privacy_status          | 'public'/'private'/... | Matches privacy status                |
+| title_contains          | string  | Title contains the string (case-insensitive by default) |
+| description_contains    | string  | Description contains the string                         |
+| min_views               | number  | View count is at least this number                      |
+| max_views               | number  | View count is at most this number                       |
+| ...                     | ...     | See `scripts/filter-videos.ts` for more types           |
+
+### Using the Filter Config with process-videos.ts
+
+To process only videos missing a `recordingDate`, run:
+
+```bash
+npm run process-videos -- --dry-run --filter-config config/filter-missing-recording-date.json
+```
+
+- Replace the config path as needed.
+- Use `--dry-run` to preview changes without making API calls.
+
+### Debugging and Testing Filters
+- If no videos are matched, double-check your filter config and the data in `data/videos.json`.
+- You can add or adjust filter rules to combine multiple criteria (all rules are ANDed).
+- Unit tests for filter logic are in `tests/filter-videos.test.ts`.
+- For more filter types and advanced usage, see the implementation in `scripts/filter-videos.ts`.
+
+### Tips
+- Always use `"enabled": true` for the filter you want to apply.
+- You can define multiple named filters in one config file, but only enabled ones are used.
+- The filter system is extensible; see the code for more advanced options.
